# my-toolz

./: .gitignore  AGG_Main.py  Main.py  Telegram.py  aria2.conf  db.py  eitaa_api.py  env.py  pyproject.toml  requirements.txt  yt-dlp-vfull.conf
.github/workflows/: agg_channel.yml  clean.yml  upload_mega.yml  vmega_c.yml  vmega_f.yml  yt2mega.yml  ytp2mega.yml  ytp2tg.yml
ytdlp/: yt-dlp-vcut.conf  yt-dlp-vfull.conf  yt-dlp.conf  yt-plist.conf  yt-single.conf
