[tool.poetry]
name = "my-toolz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_toolz"}]

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.26.0"
pymongo = "^4.3.3"
requests = "^2.28.1"
python-socks = {extras = ["asyncio"], version = "^2.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
